.kubernetes/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quicktane
  labels:
    app.kubernetes.io/part-of: quicktane
